--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "tap": "^10.3.1"
   },
   "dependencies": {
-    "fun-curry": "^0.2.6"
+    "fun-curry": "^0.2.6",
+    "fun-function": "^0.1.1",
+    "fun-predicate": "^0.15.2",
+    "fun-scalar": "^0.1.1",
+    "fun-unfold": "^0.2.0"
   }
 }
