--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.2",
   "description": "Functions for working with arrays functionally",
   "main": "src/index.js",
+  "browser": "dist/bundle.js",
   "scripts": {
     "pretest": "npm run lint",
     "test": "tap -Rtap --coverage-report=text-summary ./test/index.js",
@@ -10,13 +11,13 @@
     "predependencies": "mkdir -p img",
     "dependencies": "madge src --image img/dependencies.svg -x 'public|test|coverage|docs' --include-npm",
     "postdependencies": "npm run dependencies-test",
-    "dependencies-test": "madge . --image img/dependencies-test.svg -x 'public|coverage|docs' --include-npm",
+    "dependencies-test": "madge . --image img/dependencies-test.svg -x 'dist|public|coverage|docs' --include-npm",
     "pages-index": "showdown makehtml -i README.md -o public/index.html",
     "pages": "./script/pages.sh",
-    "lint": "eslint --ignore-path .gitignore --fix .",
+    "lint": "eslint --ignore-path .gitignore --fix . --ignore-pattern dist",
     "predocument": "rm -rf docs",
     "document": "jsdoc -c .jsdoc.json",
-    "browserify": "browserify dist/entry.js -o dist/bundle.js",
+    "browserify": "browserify dist/entry.js --no-bf | uglifyjs > dist/bundle.js",
     "readme": "cat readme/* > README.md"
   },
   "repository": {
@@ -30,18 +31,15 @@
   },
   "homepage": "https://gitlab.com/bagrounds/fun-array#README",
   "devDependencies": {
+    "browserify": "^14.3.0",
     "docdash": "^0.4.0",
     "eslint": "^3.18.0",
     "jsdoc": "^3.4.3",
     "madge": "^1.6.0",
-    "browserify": "^14.3.0",
-    "tap": "^10.3.1"
+    "tap": "^10.3.1",
+    "uglify-js": "^3.0.0"
   },
   "dependencies": {
-    "fun-curry": "^0.2.6",
-    "fun-function": "^0.2.0",
-    "fun-predicate": "^0.15.2",
-    "fun-scalar": "^0.1.1",
-    "fun-unfold": "^0.3.0"
+    "fun-function": "^0.7.3"
   }
 }
