--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "predocument": "rm -rf docs",
     "document": "jsdoc -c .jsdoc.json",
     "browserify": "browserify dist/entry.js --no-bf | uglifyjs > dist/bundle.js",
-    "readme": "cat readme/* > README.md"
+    "readme": "cat readme/* > README.md",
+    "next-update": "next-update -k true --tldr"
   },
   "repository": {
     "type": "git",
@@ -33,19 +34,20 @@
   "devDependencies": {
     "browserify": "^14.3.0",
     "docdash": "^0.4.0",
-    "eslint": "^3.18.0",
+    "eslint": "4.0.0-beta.0",
     "fun-arrange": "^0.1.4",
     "fun-object": "^0.6.3",
-    "fun-predicate": "^0.15.3",
+    "fun-predicate": "0.16.0",
     "fun-scalar": "^0.4.0",
-    "fun-test": "^0.22.2",
-    "fun-test-runner": "^0.8.2",
+    "fun-test": "^0.24.1",
+    "fun-test-runner": "^0.9.1",
     "jsdoc": "^3.4.3",
     "madge": "^1.6.0",
-    "tap": "^10.3.1",
-    "uglify-js": "^3.0.4"
+    "next-update": "^1.5.1",
+    "tap": "10.3.2",
+    "uglify-js": "3.0.10"
   },
   "dependencies": {
-    "fun-function": "^0.8.0"
+    "fun-function": "0.9.1"
   }
 }
