--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint --ignore-path .gitignore --fix . --ignore-pattern dist",
     "predocument": "rm -rf docs",
     "document": "jsdoc -c .jsdoc.json",
-    "browserify": "browserify dist/entry.js --no-bf | uglifyjs > dist/bundle.js",
+    "browserify": "browserify dist/entry.js --no-bf | uglifyjs -cm > dist/bundle.js",
     "readme": "cat readme/* > README.md",
     "next-update": "next-update -k true --tldr"
   },
@@ -32,22 +32,22 @@
   },
   "homepage": "https://gitlab.com/bagrounds/fun-array#README",
   "devDependencies": {
-    "browserify": "14.4.0",
+    "browserify": "15.2.0",
     "docdash": "^0.4.0",
-    "eslint": "4.5.0",
+    "eslint": "4.16.0",
     "fun-arrange": "^0.1.4",
-    "fun-object": "^0.6.3",
-    "fun-predicate": "0.16.0",
-    "fun-scalar": "0.5.6",
-    "fun-test": "^0.24.1",
-    "fun-test-runner": "^0.9.1",
-    "jsdoc": "3.5.4",
-    "madge": "2.1.0",
-    "next-update": "3.5.3",
-    "tap": "10.7.2",
-    "uglify-js": "3.0.28"
+    "fun-object": "0.7.1",
+    "fun-predicate": "0.17.0",
+    "fun-scalar": "^0.6.0",
+    "fun-test": "0.25.0",
+    "fun-test-runner": "0.10.1",
+    "jsdoc": "3.5.5",
+    "madge": "2.2.0",
+    "next-update": "3.6.0",
+    "tap": "11.0.1",
+    "uglify-js-es6": "^2.8.9"
   },
   "dependencies": {
-    "fun-function": "0.9.1"
+    "fun-function": "0.11.1"
   }
 }
