--- a/package.json
+++ b/package.json
@@ -36,18 +36,20 @@
     "docdash": "^0.4.0",
     "eslint": "4.16.0",
     "fun-arrange": "^0.1.4",
-    "fun-object": "0.7.1",
+    "fun-object": "^0.8.1",
     "fun-predicate": "0.17.0",
     "fun-scalar": "^0.6.0",
     "fun-test": "0.25.0",
     "fun-test-runner": "0.10.1",
     "jsdoc": "3.5.5",
-    "madge": "2.2.0",
+    "madge": "^3.0.0",
     "next-update": "3.6.0",
     "tap": "11.0.1",
     "uglify-js-es6": "^2.8.9"
   },
   "dependencies": {
-    "fun-function": "0.11.1"
+    "fun-curry": "^0.3.3",
+    "fun-type": "^0.8.1",
+    "guarded": "^0.9.0"
   }
 }
