[MINOR][ADD] cata

--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "docdash": "^0.4.0",
     "eslint": "4.17.0",
     "fun-arrange": "^0.1.4",
+    "fun-function": "^0.11.1",
     "fun-object": "^0.8.1",
     "fun-predicate": "0.17.0",
+    "fun-property": "^0.7.3",
     "fun-scalar": "^0.6.0",
-    "fun-test": "0.25.0",
+    "fun-test": "^0.25.0",
     "fun-test-runner": "0.10.1",
     "jsdoc": "3.5.5",
     "madge": "^3.0.1",
